# web-serial-debug

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.trae/rules/: tdd.md
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
desktop/src-tauri/src/commands/: mod.rs  serial.rs  storage.rs  version.rs  window.rs
docs/: requirements.md
public/: manifest.json  sw.js
src/: App.vue  main.ts  style.css
src/components/: BottleSelector.vue  CanvasPanel.vue  ChartRocket.vue  DataTable.vue  MarkdownPanel.vue  SerialConfig.vue  SerialLog.vue  SerialLogTerm.vue  SerialQuickSend.vue  SerialScript.vue  SerialSend.vue  WorkspaceSelector.vue  guide.md  types.ts
src/devices/: index.ts  types.ts
src/layouts/: AppShell.vue
src/pages/: CanvasPage.vue  HelpPage.vue  WorkbenchPage.vue
src/router/: index.ts
src/store/: dashboardStore.ts  dataSeriesStore.ts  fieldStore.ts  playbackStore.ts  quickSendStore.ts
src/types/: web-serial.d.ts
src/utils/: BottleManager.ts  ConfigManager.ts  DataSeriesStorage.ts  DataSourceProvider.ts  Platform.ts  PlaybackController.ts  PlaybackProvider.ts  ProfileManager.ts  RealtimeProvider.ts  ScriptManager.ts  SerialHelper.ts  StorageAdapter.ts  desktopApi.ts  lttb.ts  useWorkspaceConfig.ts
tests/: mock-serial-reader.cjs  mock-serial-sender.cjs
window/: main.go
(+113 files in other folders)
