[package]
name = "bus-studio-desktop"
version = "4.1.0"
description = "BUS Studio Desktop (Tauri)"
authors = ["BUS Studio"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "bus_studio_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
parking_lot = "0.12"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
influxdb2 = { version = "0.5", default-features = false, features = ["rustls"] }
influxdb2-structmap = "0.2"
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
